# wordle

./: .cursorrules  .dockerignore  .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  .prettierignore  .prettierrc  .venv  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTORS.md  Dockerfile  LICENSE  Procfile  README.md  TODO.md  app.vue  error.vue  gunicorn.conf.py  gunicorn.dev.py  node_modules  nuxt.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  pytest.ini  qa-screenshots.ts  render.yaml  requirements.txt  runtime.txt  tsconfig.json  vite.config.js  vitest.config.ts
app/: router.options.ts
components/: LbAvatar.vue  LbList.vue  LbPodium.vue
composables/: useAnalytics.ts  useAnimatedNumber.ts  useAuth.ts  useAutoHeight.ts  useBadgeNotification.ts  useContextWords.ts  useDayRollover.ts  useDefinitions.ts  useEmbed.ts  useFlag.ts  useFlipExpand.ts  useGameLifecycle.ts  useGameModeSeo.ts  useGameModes.ts  useGamePage.ts  useGameSeo.ts  useGameShare.ts  useHaptics.ts  useHreflang.ts  useLoginModal.ts  useMultiBoardLayout.ts  useMultiBoardModePage.ts  useMultiBoardPage.ts  usePageDirection.ts  usePlayType.ts  useProductStreak.ts  useReportModal.ts  useSemanticGame.ts  useSounds.ts  useSync.ts  useToast.ts  useWordData.ts
data/: default_language_config.json
docs/: CURATED_WORDS.md  DICTIONARY_IMPROVEMENT_PLAN.md  ROADMAP.md  TODO.md  WORD_DATA_ARCHITECTURE.md  analytics-weekly.md  nuxt-migration.md
e2e/: gameplay.spec.ts  helpers.ts  integration.spec.ts  smoke.spec.ts  sync.spec.ts
layouts/: default.vue  game.vue
middleware/: page-direction.global.ts
nuxt/: .gitignore  error.vue  nuxt.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  qa-screenshots.ts  vitest.config.ts
pages/: accessibility.vue  index.vue  leaderboard.vue  profile.vue  stats.vue
plugins/: analytics.client.ts  debug.client.ts  pwa.client.ts  server-route-guard.client.ts  sync.client.ts  view-transition-direction.client.ts
prisma/: prisma.config.ts  schema.prisma  seed.ts
public/: ads.txt  llms.txt  manifest.json  offline-game.html  robots.txt
scripts/: add_language.py  add_seo_translations.py  add_translations.py  (+42 more)
(+1735 files in other folders)
