[project]
name = "wordle-global"
version = "1.0.0"
description = "Daily word puzzle game in 65+ languages"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.0",
    "flask-cors>=6.0.0",
    "gunicorn>=24.0.0",
    "Flask-FlatPages>=0.9.0",
    "openai>=2.21.0",
    "pillow>=12.1.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "wordfreq>=3.1.1",
]

[tool.black]
line-length = 100
target-version = ['py314']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
    | \.venv
    | venv
    | node_modules
    | webapp/static/dist
)/
'''
