[project]
name = "wordle-global"
version = "1.0.0"
description = "Daily word puzzle game in 65+ languages"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.0",
    "flask-cors>=6.0.0",
    "gunicorn>=24.0.0",
    "openai>=2.21.0",
    "pillow>=12.1.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.11.0",
    "wordfreq>=3.1.1",
]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
    ".git",
    ".venv",
    "venv",
    "node_modules",
    "webapp/static/dist",
    "webapp/deprecated",
    "tests/deprecated",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]
ignore = [
    "E501", # line too long (formatter handles this)
]

[tool.ruff.lint.isort]
known-first-party = ["webapp"]
